// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hover for step 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
    <TouchableIOS
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIconFilled"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </TouchableIOS>
  </Flex>
</TouchableIOS>
`;

exports[`renders me correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders no initial animation 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders not me correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders type action correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
    <TouchableIOS
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIcon"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </TouchableIOS>
  </Flex>
</TouchableIOS>
`;

exports[`renders type contact correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders type reminder correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={false}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(183, 231, 240)",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`renders type swipeable correctly 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;

exports[`step item animations renders animation fade in 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
    <TouchableIOS
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Flex
        align="center"
        animation="fadeInRight"
        justify="center"
      >
        <Icon
          name="starIcon"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </TouchableIOS>
  </Flex>
</TouchableIOS>
`;

exports[`step item animations renders animation fade out 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
    <TouchableIOS
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
    >
      <Flex
        align="center"
        animation="fadeOutRight"
        justify="center"
      >
        <Icon
          name="starIcon"
          style={
            Array [
              Object {
                "color": "#52C5DC",
                "fontSize": 35,
                "padding": 10,
              },
              undefined,
            ]
          }
          type="MissionHub"
        />
      </Flex>
    </TouchableIOS>
  </Flex>
</TouchableIOS>
`;

exports[`step item animations renders no animation 1`] = `
<TouchableIOS
  activeOpacity={1}
  highlight={true}
  onPress={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  underlayColor="rgb(208, 239, 245)"
>
  <Flex
    align="center"
    direction="row"
    style={
      Object {
        "marginTop": 1,
        "minHeight": 80,
        "paddingLeft": 24,
        "paddingRight": 13,
        "paddingVertical": 16,
        "width": 750,
      }
    }
  >
    <Flex
      direction="column"
      justify="center"
      value={1}
    >
      <ItemHeaderText
        text=""
      />
      <MyText
        style={
          Object {
            "fontSize": 14,
          }
        }
      >
        Test Step
      </MyText>
    </Flex>
  </Flex>
</TouchableIOS>
`;
